// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Highlighter parses an highlighted attribute of hit object 1`] = `
<span
  className="ais-Highlight"
>
  <span
    className="ais-Highlight__nonHighlighted"
  >
    awesome 
  </span>
  <em
    className="ais-Highlight__highlighted"
  >
    hi
  </em>
  <span
    className="ais-Highlight__nonHighlighted"
  >
    ghlighted 
  </span>
  <em
    className="ais-Highlight__highlighted"
  >
    hi
  </em>
  <span
    className="ais-Highlight__nonHighlighted"
  >
    t!
  </span>
</span>
`;

exports[`Highlighter renders a hit with a custom tag correctly 1`] = `
<span
  className="ais-Highlight"
>
  <span
    className="ais-Highlight__nonHighlighted"
  >
    awesome 
  </span>
  <mark
    className="ais-Highlight__highlighted"
  >
    hi
  </mark>
  <span
    className="ais-Highlight__nonHighlighted"
  >
    ghlighted 
  </span>
  <mark
    className="ais-Highlight__highlighted"
  >
    hi
  </mark>
  <span
    className="ais-Highlight__nonHighlighted"
  >
    t!
  </span>
</span>
`;
